# VAmPI

./: .env.example  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.tools  Makefile  QUICKSTART.md  README.md  docker-compose.yaml  run-tests.sh  stackhawk.yml
integration-tests/: .gitignore  QUICKSTART.md  README.md  UV.md  __init__.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup-uv.sh  test_00_health.py  test_01_sqli.py  test_02_mass_assignment.py  test_03_bola.py  test_04_unauthorized_password_change.py  test_05_user_enumeration.py  test_06_regex_dos.py  test_07_excessive_data_exposure.py  test_08_weak_jwt.py  test_09_no_rate_limiting.py
stackhawk.d/: README.md  stackhawk-auth-jwt-admin.yml  stackhawk-auth-jwt-openapi.yml  stackhawk-auth-jwt.yml  stackhawk-auth-multi-user.yml  stackhawk-custom-spider-curl.yml  stackhawk-debug-endpoint.yml  stackhawk-mass-assignment.yml  stackhawk-openapi.yml  stackhawk-sqli-focus.yml  stackhawk-unauthenticated.yml  stackhawk.yml
tools/: README.md  __init__.py  bootstrap.py
